refactor: null 대신 빈 컬렉션 주입